# lung-masters

./: ProjectHome.md  utils.cpp
LungRetriever/: CMakeLists.txt  IM000011  IM000011B  IM000011_left.dcm  IM000011_left.txt  IM000011_right.dcm  IM000011_right.txt  Makefile  fineTuner.c  main.cpp  similarityCalculator.c
LungRetriever/web/: header.php  script.js  utils.php
monografia/: cbir.tex  conclusoes.tex  ferramenta.tex  intro.tex  main.tex  paginas_preliminares.tex  processamento_de_imagens.tex  referencias.bib  resultados.tex  resumo.tex  segmentacao.tex
nbproject/: Makefile-impl.mk  configurations.xml  project.xml
trunk/: PCC.ppt
trunk/LungRetriever/: CMakeCache.txt  CMakeLists.txt  IM000017  Segmentation.cpp  Segmentation.hpp  cmake_install.cmake  coach.c  main.cpp  training.data
trunk/LungRetriever/web/: DB.sql  footer.php  index.php  style.css  valeu.php
trunk/monografia/: cbir.tex  conclusoes.tex  ferramenta.tex  intro.tex  main.tex  paginas_preliminares.tex  processamento_de_imagens.tex  referencias.bib  resultados.tex  resumo.tex  segmentacao.tex
trunk/monografia/Final/: Capa_para_CD-ROM_FilipeGiusti2.doc  capa_tcc.doc  ficha_de_filipe_ giusti_computacao.doc
trunk/nbproject/: Makefile-Default.mk
